Update style guides
This also sneaks in a few minor style changes.

--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -39,6 +39,10 @@ section > header {
 	padding-bottom: 8em;
 }
 
+.archive-footer {
+	padding: 2rem;
+}
+
 .gray-lighter-back {
 	background-color: #f1f1f1;
 }
