--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ section > header {
 	padding-bottom: 8em;
 }
 
+.archive-footer {
+	padding: 2rem;
+}
+
 .gray-lighter-back {
 	background-color: #f1f1f1;
 }
@@ -140,6 +144,7 @@ body {
 	letter-spacing: 2px;
 }
 
+.main-header .sup-header:not(.unset),
 .main-header .sup-header:not(.unset) a {
 	color: #5e6a71;
 	font-weight: 700;
@@ -168,7 +173,6 @@ h2 {
 }
 
 .archive-header h1,
-#feedback h2,
 h3 {
 	color: #981e32;
 	font-size: 2.75em;
