--- a/style.css
+++ b/style.css
@@ -770,7 +770,7 @@ aside.widget p {
 	}
 }
 
-@media screen and (min-width: 989px) {
+@media screen and (min-width: 990px) {
 
 	.intro .one {
 		margin-top: 1em;
@@ -809,7 +809,7 @@ aside.widget p {
 
 	.the-evidence .side-left.reverse .one {
 		right: 0;
-		background-position: calc(100vw - (1188px / 2) - 99px) center;
+		background-position: calc(100vw - (1188px / 2)) center;
 	}
 
 	.the-evidence .side-left .two {
