--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ section > header {
 	}
 }
 
-body {
+main {
 	color: #282828;
 	font-family: proxima-nova, "Open Sans", Arial, sans-serif;
 	font-weight: 400;
@@ -182,8 +182,8 @@ h3 {
 }
 
 p,
-li {
-	font-size: 1.1em;
+main li {
+	font-size: 1rem;
 	font-weight: 400;
 	letter-spacing: .5px;
 	line-height: 1.5;
